# path-finder-cli

./: .gitignore  .gitmodules  Benchmark.cpp  CMakeLists.txt  FileCreator.cpp  QueueWorker.cpp  README.md  RunFromFiles.cpp  activeMQExample.cpp  main.cpp  osmpbf-to-chfmi.sh
benchmarks/: simpleDistanceBenchmark.cpp
docker/: docker-compose.yml
docker/src/: Dockerfile  run.sh
